[tool.poetry]
name = "bohr-api"
version = "0.2.0"
description = ""
authors = ["hlib <hlibbabii@gmail.com>"]
packages = [
    { include = "bohrapi" },
]

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
commit-explorer-client = "^0.2.0"
nltk = "^3.5"
pandas = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
